2005-07-26  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): Add some ordering constraints.

2005-07-25  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): On Solaris and HP-UX, define
	PTHREAD_IN_USE_DETECTION_HARD.
	* gettext.m4 (AM_INTL_SUBDIR): Also hide the glthread_in_use function.

2005-07-22  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): Stronger test for pthread functions in libc, so
	that the result on IRIX 6.5 is no.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Also hide the glthread_once* functions.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* lock.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Remove multithreading checks. Instead
	require gl_LOCK and define __libc_lock_*, __libc_rwlock_*,
	__libc_lock_*recursive*, glthread_* as macros.
	* Makefile.am (EXTRA_DIST): Add lock.m4.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Add LIBTHREAD to LIBINTL and
	LTLIBTHREAD to LTLIBINTL.
	(AM_INTL_SUBDIR): Check for thread library. Set LIBTHREAD, LTLIBTHREAD.

2005-03-13  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_PO_SUBDIRS): Use AC_CONFIG_COMMANDS instead of
	AC_OUTPUT_COMMANDS.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-04-30  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Remove CPPFLAGS addition for
	CoreFoundation on MacOS X.
	(gt_INTL_MACOSX): Likewise. Use #include <CoreFoundation/...> syntax.
	It's a special Apple syntax implemented in the C compiler, but since
	<CFString.h> already uses it, all compilers usable on MacOS X must
	support it. In LIBS, use -Wl prefix for -framework option.

2005-05-03  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Also test for NL_LOCALE_NAME macro.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-06  Bruno Haible  <bruno@clisp.org>
